First stable version, without AI

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="/notes.png" />
-  <link rel="apple-touch-icon" href="/notes.png">
+  <link rel="icon" href="/Luna.png" />
+  <link rel="apple-touch-icon" href="/Luna.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Keeper App</title>
+  <title>Keeper MainPage</title>
   <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet" />
 </head>
 <body>
